@startuml Supplement

' Preview durch <Alt>d

package typeorm {
  class "@Entity" as Entity
  hide Entity circle
  class "@Column" as Column
  hide Column circle
  class "@PrimaryGeneratedColumn" as PrimaryGeneratedColumn
  hide PrimaryGeneratedColumn circle
  class "@PrimaryColumn" as PrimaryColumn
  hide PrimaryColumn circle
  class "@OneToMany" as OneToMany
  hide OneToMany circle
  class "@OneToOne" as OneToOne
  hide OneToOne circle
  class "@JoinColumn" as JoinColumn
  hide JoinColumn circle
  class "@ManyToOne" as ManyToOne
  hide ManyToOne circle
  class "@CreateDateColumn" as CreateDateColumn
  hide CreateDateColumn circle
  class "@UpdateDateColumn" as UpdateDateColumn
  hide UpdateDateColumn circle
}

package supplement.entity {
  class "type supplementArt = 'pulver' | 'tabletten' | 'kapseln'" as SupplementArt
  hide SupplementArt circle

  class Supplement <<entity>> <<@Entity>> {
    @PrimaryGeneratedColumn() readonly id: number
    @Column() readonly name: string
    @Column('varchar') readonly portionen: number
    @Column('varchar') readonly supplementArt: supplementArt
    @CreateDateColumn() readonly erzeugt: Date
    @UpdateDateColumn() readonly aktualisiert: Date
  }

  class Produktbild <<entity>> <<@Entity>> {
    @PrimaryColumn() readonly id: number
    @Column() readonly bezeichnung: string
    @Column() readonly path: string
    @ManyToOne(() => Supplement) @JoinColumn() supplement: Supplement
  }

  class Beschreibung <<entity>> <<@Entity>> {
    @PrimaryColumn() readonly id: number
    @Column() readonly info: string
    @Column() readonly vorteile: string
    @Column() readonly dosierempfehlung: string
    @OneToOne(() => Supplement) @JoinColumn() supplment: Supplement
  }

  Supplement *--> "*" Produktbild : @OneToMany()\nproduktbilder
  Supplement *--> "1" Beschreibung : @OneToOne()\nbeschreibung

  Supplement .right.> Entity
  Supplement .right.> SupplementArt
}

hide empty members


@enduml
